--- a/grid.css
+++ b/grid.css
@@ -1,26 +1,28 @@
 .grid-container {
     display: grid;
-    height: 1000px;
-    grid-template-columns: 10fr 10fr 10fr ;
-    grid-template-rows: 10fr 1fr  10fr;
+    /* height: 1000px; */
+    grid-template-columns: 10fr 10fr 1fr ;
+    grid-template-rows: 10fr 1fr 1fr;
     /* grid-auto-rows: 100px;
     grid-auto-columns: 200px;
     grid-auto-flow:column; */
     gap: 50px;
-    /* justify-items: start;*/
-    align-items: end; 
+    justify-content: start;
+    /* align-items: end;  */
     /* align-content: end;  */
     background-color: aqua;
   }
+  .grid-container div{
+    border:2px solid red;
+  }
 /* .item1 {
-    grid-row: 1/3 ; 
+    grid-row: 4 span ; 
  } */
-/* .item1{
+.item1{
   background-color: aliceblue;
-  /* grid-column: 1 / 2 ;  */
-  /* align-self: start;
+  /* align-self: start; */
   justify-self: start;
- }  */ 
+ }  
 
 /* .grid-container div{
    background-color: azure;
