--- a/flex.css
+++ b/flex.css
@@ -2,34 +2,33 @@
     background-color: aquamarine;
     border: 2px solid black;
     display: flex;
-    height: 400px;
     /* flex-wrap: wrap-reverse; */
-    /* flex-direction: column-reverse; */
-    /* height: 300px;*/
-    /* justify-content: space-evenly;   */
-    /* align-items: start; 
+    /* flex-direction:row-reverse; */
+    /* height: 600px;
+    justify-content:space-evenly;  
+    align-items: end;
 }
 .container div{
     background-color: bisque;
     border: 1px solid black;
     margin: 10px;
     padding: 20px;
-} */ 
-/* .container{
+}  */ 
+.container{
     background-color: aquamarine;
     border: 2px solid black;
     display: flex;
     flex-direction: column;
     height: 300px;
     /* justify-content: flex-start; */
-    /* align-items: start;
+    align-items: start;
 }
 .container div{
     background-color: bisque;
     border: 1px solid black;
     margin: 10px;
     padding: 20px;
-} */ 
+}  
 
  /* .container{
   background-color: rgb(106, 237, 119);
@@ -52,7 +51,7 @@
 .container .c{
     flex-grow: 2 ;
 }  */
-.container{
+/* .container{
     background-color: aquamarine;
     height: 300px;
     display: flex;
@@ -63,10 +62,10 @@
     height: 100px;
     flex-shrink: 1;
     /* align-self: end; */
-}
+/* }
 .item2{
     background-color: brown;
     width: 100%;
     height: 100px;
     flex-shrink: 3;
-}
+} */ 
