--- a/flex.css
+++ b/flex.css
@@ -14,21 +14,21 @@
     margin: 10px;
     padding: 20px;
 }  */ 
-.container{
+/* .container{
     background-color: aquamarine;
     border: 2px solid black;
     display: flex;
     flex-direction: column;
     height: 300px;
     /* justify-content: flex-start; */
-    align-items: start;
+    /* align-items: start;
 }
 .container div{
     background-color: bisque;
     border: 1px solid black;
     margin: 10px;
     padding: 20px;
-}  
+}   */ 
 
  /* .container{
   background-color: rgb(106, 237, 119);
@@ -40,18 +40,18 @@
     background-color: blue;
     padding: 50px;
     margin: 30px;
-}  */
-/* 
+}  
+
 .container .a{
-   align-self:flex-end;
+   align-self: center;
 }
 .container .b{
-    flex-grow: 2 ;
+    align-self: flex-end;
 }
 .container .c{
-    flex-grow: 2 ;
+    align-self: flex-start
 }  */
-/* .container{
+ .container{
     background-color: aquamarine;
     height: 300px;
     display: flex;
@@ -60,12 +60,12 @@
     background-color: rgb(87, 87, 179);
     width: 100%;
     height: 100px;
-    flex-shrink: 1;
+    flex-shrink: 2;
     /* align-self: end; */
-/* }
+ }
 .item2{
     background-color: brown;
     width: 100%;
     height: 100px;
     flex-shrink: 3;
-} */ 
+} 
