--- a/grid.css
+++ b/grid.css
@@ -1,26 +1,28 @@
 .grid-container {
     display: grid;
     /* height: 1000px; */
-    grid-template-columns: 10fr 10fr 1fr ;
-    grid-template-rows: 10fr 1fr 1fr;
+    grid-template-columns: 5fr 5fr 1fr ;
+    grid-template-rows: 10fr 10fr;
+    height: 500px;
     /* grid-auto-rows: 100px;
     grid-auto-columns: 200px;
     grid-auto-flow:column; */
     gap: 50px;
-    justify-content: start;
-    /* align-items: end;  */
+    /* justify-items: start; */
+    /* align-items: start;  */
     /* align-content: end;  */
     background-color: aqua;
   }
   .grid-container div{
     border:2px solid red;
+    background-color: bisque;
   }
 /* .item1 {
-    grid-row: 4 span ; 
+     grid-row: 1/3;
  } */
 .item1{
   background-color: aliceblue;
-  /* align-self: start; */
+  /* align-self: end; */
   justify-self: start;
  }  
 
